# adwaita-blue

./: .gitignore  Makefile.am  README.md  configure.ac
gtk-2.0/: Makefile.am
gtk-3.0/: Makefile.am  _adwaita-blue-overrides.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  adwaita-blue-dark.scss  adwaita-blue.scss  assets
